[metadata]
name = flask_saas
version = 0.0.1
author = Chris Simpson  
author_email = oss@karmacomputing.co.uk
description = Add Stripe connect onboarding quickly for flask applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KarmaComputing/flask-saas
project_urls =
    Bug Tracker = https://github.com/KarmaComputing/flask-saas/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
